# nixos

./: .sops.yaml  flake.nix
home-manager/: home.nix
home-manager/modules/: catppuccin.nix  plasma-manager.nix  programs.nix  session.nix
home-manager/modules/plasma-manager/: fonts.nix  hotkeys.nix  workspace.nix
home-manager/modules/programs/: eza.nix  fish.nix  neovim.nix
home-manager/modules/session/: desktopEntries.nix  sessionPath.nix  sessionVariables.nix
homes/jaugusto/: home.nix  secrets.yaml
homes/jaugusto/conf/: fish.nix  git.nix  keepassxc.nix  kitty.nix  nushell.nix  yt-dlp.nix  zed-editor.nix
homes/x86_64-linux/jaugusto/: default.nix  home.nix  secrets.yaml
homes/x86_64-linux/jaugusto/include/files/Templates/pico-sdk-template/src/app/: CMakeLists.txt
homes/x86_64-linux/jaugusto@pluto/: default.nix
lib/: default.nix
modules/genericModules/stylix/: stylix-dracula.nix
modules/home/backup/: default.nix
modules/home/catppuccin/: default.nix
modules/homeConfigurations/: jaugusto.nix
modules/nixosConfigurations/: erebus.nix  pluto.nix  terra.nix
modules/nixosModules/: zram.nix
modules/overlays/: ffmpeg-full.nix
overlays/ffmpeg-full/: default.nix
system/: configuration.nix
system/modules/: bluetooth.nix  boot.nix  flatpak.nix  localization.nix  networking.nix  programs.nix  services.nix
systems/erebus/: configuration.nix  disk-config.nix  facter.json  secrets.yaml  tlpSettings.nix
systems/pluto/: configuration.nix  disk-config.nix  secrets.yaml  tlpSettings.nix
systems/terra/: configuration.nix
(+226 files in other folders)
